# llmautotest

./: .gitignore  PROMPT.md  README.md  agent.py  pyproject.toml  requirements.in  requirements.txt
file/: ripgrep.py
gui_agent/: agent.py  backup.txt
llm_utils/: __init__.py  actions.py  code_scope.py  config_loader.py  ocr.py  screen.py  text.py  vision.py
permission/: __init__.py  command_permission.py
planner/: __init__.py  finalizer.py  perception.py  planner.py  policies.py  semantic_agent.py  semantic_state_machine.py  state.py  types.py  verifier.py  workflow.py
planner/prompt/: create_plan.txt  execute_gui_step.txt  execute_step.txt  loader.py  replan.txt  semantic_detect.txt  semantic_diff_description.txt  semantic_localize.txt  semantic_retrieve.txt  semantic_validate.txt  summarize_execution.txt  workflow_context.txt
router/: router.py
services/lsp/: language.py  lsp.py  manager.py  server.py
skill/: JS_SKILL.md  LSP_SKILL.md  PY_SKILL.md
tools/: ast.py  code_index.py  code_localization.py  code_retrieval.py  grep.py  gui_ipc.py  lsp.py  semantic_diff.py  semantic_diff_ts.py  shell.py  static_analysis.py  tools.py
tools/core/: __init__.py  runtime.py
tools/description/: description.py
